--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-body{ background-color: rgba(255, 251, 0, 0.848);
-    color: rgb(191, 0, 255);
-}
+body { background-color: rgb(255, 0, 200);
+    color: rgb(15, 15, 14);
+    font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+} .imagem-cabecalho{width: 200px;}
+
+
+.título-cabecalho
+   {display: inline-block;
+      margin: 0 16px;
+      padding: 100px 0;
+      font-size: 40px;}
