--- a/style.css
+++ b/style.css
@@ -26,3 +26,7 @@ body { background-color: rgb(165, 20, 20);
         margin: 0 16px;
       padding: 24px 0;
     font-size: 24px;}
+
+    .escola-imagem{
+      width: 25%;
+    }
