--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ body { background-color: rgb(165, 20, 20);
     .escola-imagem{
       width: 25%;
     }
+
+    .escola {
+      background-image: linear-gradient(red,black);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 24px 0;}
