--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body { background-color: rgb(4, 0, 0);
 }
 
 
-  .cabecalho {background-color: rgb(0, 255, 13);
+  .cabecalho {background-color: rgb(255, 0, 0);
 color: rgb(3, 3, 3);
 display: flex;
 justify-content: space-around; 
@@ -34,8 +34,8 @@ font-size: 24px;}
 {width: 50%;}
 
 .escola{
-  background-image: linear-gradient(rgb(0, 255, 13),black);
-  color: rgb(0, 0, 0);
+  background-image: linear-gradient(red,black);
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,27 +63,30 @@ font-size: 24px;}
  text-align: center;
 padding: 50px 0;
 font-size: 30px;
+color: aliceblue;
   }
 
   .estudante-div {
    text-align: center;
-
+color: aliceblue;
   }
     .estudante-todos {
       display: grid;
       grid-template-columns: 25% 25% 25% 25%;
     }  
-
-    footer{
-      background-color: rgb(9, 255, 0);
-      color: rgb(0, 0, 0);
-    }
-    .rodape{
-      text-align: center;
-      font-size: 40px;
-    }
-  .lista-rodape{
-    display: block;
-    text-align: center;
-    font-size: 20px;
-  }
+footer{
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+}
+.rodape{
+  text-align: center;
+  font-size: 40px;
+}  
+.lista-rodape{
+  display: block;
+  text-align: center;
+  font-size: 20px;
+}
+.estudante-icone{
+  width: 20%;
+}
